--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,46 @@ html,body{
     height: 100%;
     width: 100%;
 }
+body{
+    background-color: #0D1321;
+}
+.navbar{
+    height: 20%;
+}
+
+.navbar .logo{
+    width: 150px;
+    position: absolute;
+}
+
+.navbar .logo img{
+    width: 50%;
+}
+
+.navbar ul{
+    list-style: none;
+    text-decoration: none;
+    background-color: #1D2D44;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    padding-left: 65%;
+    height: 50%;
+}
+.navbar a{
+    color: #F0EBD8;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    padding: 15px;
+    font-size: 25px;
+}
+.navbar a:hover{
+    opacity: 1;
+}
+.navbar li{
+    float: left;
+}
+
+
+
