--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
+    border-bottom: 3px solid #fff;
 }
 .logo {
     width: 150px;
@@ -50,4 +51,7 @@ button{
     cursor: pointer;
     transition: all 0.3s ease 0s;
 
+}
+button:hover{
+    background-color: rgba(0,136,169,0.8);
 }
