--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.cdnfonts.com/css/visby');
 *{
     margin: 0;
     padding: 0;
@@ -27,6 +28,7 @@ header{
 .logo {
     width: 150px;
     cursor: pointer;
+    font-family: 'Visby', sans-serif;
 }
 .nav__links{
     list-style-type: none;
@@ -55,3 +57,35 @@ button{
 button:hover{
     background-color: rgba(0,136,169,0.8);
 }
+
+section{
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+  
+  }
+  .home{
+    display: flex;
+    align-items: center;
+    padding: 0 9%;
+  }
+  
+  
+  .home-content{
+    max-width: 60rem;
+  }
+  .home-content h1{
+    position: absolute;
+    margin-bottom: 10%;
+    font-size: 5.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+    color: #fff;
+  }
+  
+  .home-content h1 span{
+    color: white;
+  
+  }
+
+
+
