--- a/styles.css
+++ b/styles.css
@@ -1,91 +1,121 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-@import url('https://fonts.cdnfonts.com/css/visby');
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     background-color: #24252a;
 }
-html,body{
+
+html, body {
     height: 100%;
     width: 100%;
 }
 
-li,a,button{
-    font-family: "Montserrat",sans-serif;
+li, a, button {
+    font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 16px;
     color: #ecf0f1;
     text-decoration: none;
 }
-header{
+
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
     border-bottom: 3px solid #fff;
 }
+
 .logo {
     width: 150px;
     cursor: pointer;
     font-family: 'Visby', sans-serif;
 }
-.nav__links{
+
+.nav__links {
     list-style-type: none;
 }
-.nav__links li{
+
+.nav__links li {
     display: inline-block;
     padding: 0px 20px;
-
 }
-.nav__links li a{
+
+.nav__links li a {
     transition: all 0.3s ease 0s;
 }
 
-.nav__links li a:hover{
+.nav__links li a:hover {
     color: #00a8a9;
 }
-button{
+
+button {
     padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
+    background-color: rgba(0, 136, 169, 1);
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
-
-}
-button:hover{
-    background-color: rgba(0,136,169,0.8);
 }
 
-section{
+button:hover {
+    background-color: rgba(0, 136, 169, 0.8);
+}
+
+section {
     min-height: 100vh;
     padding: 10rem 9% 2rem;
-  
-  }
-  .home{
+}
+
+.home-content {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 0 9%;
-  }
-  
-  
-  .home-content{
-    max-width: 60rem;
-  }
-  .home-content h1{
-    position: absolute;
-    margin-bottom: 10%;
+}
+
+.header-content {
+    max-width: 60%;
+}
+
+.image-container {
+    flex-grow: 1;
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+}
+
+.home-content h1 {
+    position: relative;
     font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.3;
     color: #fff;
-  }
-  
-  .home-content h1 span{
+}
+
+.home-content h1 span {
     color: white;
-  
-  }
+}
+p{
+    color: #fff;
+}
+.btn{
 
-
-
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    padding: 13px 23px;
+    border: 1px solid #222222;
+    transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+    background: #fff;
+    color: #222222;
+}
+.btn:hover {
+    border-color: #000000;
+    background: #f7f7f7;
+}
