--- a/styles.css
+++ b/styles.css
@@ -47,19 +47,27 @@ header {
 
 .nav__links li a:hover {
     color: #00a8a9;
+    font-size: 2rem;
 }
 
 button {
-    padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 1);
-    border: none;
-    border-radius: 50px;
+    display: inline-block;
+    outline: none;
     cursor: pointer;
-    transition: all 0.3s ease 0s;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    padding: 13px 23px;
+    border: 1px solid #222222;
+    transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+    background: #fff;
+    color: #222222;
 }
 
 button:hover {
-    background-color: rgba(0, 136, 169, 0.8);
+    border-color: #000000;
+    background: #f7f7f7;
 }
 
 section {
@@ -99,6 +107,7 @@ section {
 }
 p{
     color: #fff;
+    line-height: 1.8rem;
 }
 .btn{
 
@@ -118,4 +127,18 @@ p{
 .btn:hover {
     border-color: #000000;
     background: #f7f7f7;
+}
+.image-container{
+        position: relative;
+        width: 25rem;
+        height: 25rem;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+.image-container img{
+  width: 85%;
+  border-radius: 50%;
+  border: 0.2rem solid white;
 }
